2001-05-21  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/.cvsignore: Fixed so that it wasn't ignoring controlled
	files & ignoring all the generated files.
	* Makefile (doc/Config.pod): Added generation of pod for Config.pm.
	(doc): Added generation of comicpage man & html pages.

2001-05-21  Elliot Glaysher  <nuriko.chan@home.com>

	* The kind people at sourceforge have moved the gtkcomics file to
	comicpage.
	* Makefile: Update from gtkcomics to comicpage
	* debian/netcomics.files: It's no longer /usr/bin/gtkcomics...
	* debian/netcomics.menu:  "                                  "
	* comicpage: Changed various instances of gtkcomics to ComicPage
	* doc/comicpage.pod: Initial commit.
	* TODO: Removed a couple of things that have been done (like merge
	in comicpage)
	
2001-05-20  Elliot Glaysher  <nuriko.chan@home.com>

	* TODO: Created a comicpage section, at the request of Ben. It's mostly
	his work, though I did make some minor revisions.
	* debian/netcomics.menu: Put ComicPage on the Debian menu, under
	Apps->Viewers.
	* debian/netcomics.files: Add "gtkcomics" as a file in this package.
	* Makefile: small tweak so it cleans up after dpkg-buildpackage fully.
	
2001-05-17  Elliot Glaysher  <nuriko.chan@home.com>

	* AUTHORS: Fixed problem with Kai Wurm's name. Oops.
	* Netcomics/Config.pm.in (clear_date_settings): Added POD text for
	this function.
	* Netcomics/Util.pm (in_future): Added this routine to check if a date
	has happened yet.
	* gtkcomics (Display_comic): Use in_future() to check that the user
	didn't click on a date in the future. Added POD text.
	* Netcomics/Util.pm (in_future): I'm a moron. Date checking now works
	for comics with a days behind value.
	
2001-05-16  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/design.dia: Added this class diagram which describes the
	design of the current implementation of netcomics & gtkcomics in
	the OO branch.

2001-05-15  Elliot Glaysher  <nuriko.chan@home.com>

	* AUTHORS: Initial checkin.